[gd_scene load_steps=72 format=2]

[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00016.png" type="Texture" id=1]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00018.png" type="Texture" id=2]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00020.png" type="Texture" id=3]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00023.png" type="Texture" id=4]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00002.png" type="Texture" id=5]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00001.png" type="Texture" id=6]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00022.png" type="Texture" id=7]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00017.png" type="Texture" id=8]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00024.png" type="Texture" id=9]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00025.png" type="Texture" id=10]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00005.png" type="Texture" id=11]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00006.png" type="Texture" id=12]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00035.png" type="Texture" id=13]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00000.png" type="Texture" id=14]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00007.png" type="Texture" id=15]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00008.png" type="Texture" id=16]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00010.png" type="Texture" id=17]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00012.png" type="Texture" id=18]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00013.png" type="Texture" id=19]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00014.png" type="Texture" id=20]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00019.png" type="Texture" id=21]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00021.png" type="Texture" id=22]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00004.png" type="Texture" id=23]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00003.png" type="Texture" id=24]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00015.png" type="Texture" id=25]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00009.png" type="Texture" id=26]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00011.png" type="Texture" id=27]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00036.png" type="Texture" id=28]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00041.png" type="Texture" id=29]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00044.png" type="Texture" id=30]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00029.png" type="Texture" id=31]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00026.png" type="Texture" id=32]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00046.png" type="Texture" id=33]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00038.png" type="Texture" id=34]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00034.png" type="Texture" id=35]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00032.png" type="Texture" id=36]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00030.png" type="Texture" id=37]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00045.png" type="Texture" id=38]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00031.png" type="Texture" id=39]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00028.png" type="Texture" id=40]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00039.png" type="Texture" id=41]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00049.png" type="Texture" id=42]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00033.png" type="Texture" id=43]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00043.png" type="Texture" id=44]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00040.png" type="Texture" id=45]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00027.png" type="Texture" id=46]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00037.png" type="Texture" id=47]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00047.png" type="Texture" id=48]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00048.png" type="Texture" id=49]
[ext_resource path="res://res/zones/EvangelionZone/water/Render/water_00042.png" type="Texture" id=50]
[ext_resource path="res://src/gameplay/zones/WaterMoon.gd" type="Script" id=51]
[ext_resource path="res://res/zones/EvangelionZone/background.png" type="Texture" id=52]
[ext_resource path="res://res/zones/EvangelionZone/moon.png" type="Texture" id=53]
[ext_resource path="res://src/gameplay/zones/EvangelionZone.gd" type="Script" id=54]
[ext_resource path="res://res/zones/EvangelionZone/moon_part.png" type="Texture" id=55]
[ext_resource path="res://res/zones/EvangelionZone/moon_light.png" type="Texture" id=56]
[ext_resource path="res://res/zones/EvangelionZone/deco_0.png" type="Texture" id=57]
[ext_resource path="res://res/zones/EvangelionZone/deco_2.png" type="Texture" id=58]
[ext_resource path="res://res/zones/EvangelionZone/deco_1.png" type="Texture" id=59]
[ext_resource path="res://res/zones/EvangelionZone/moon_light_back.png" type="Texture" id=60]
[ext_resource path="res://res/zones/EvangelionZone/layer_0.png" type="Texture" id=61]
[ext_resource path="res://res/zones/EvangelionZone/layer_1.png" type="Texture" id=62]
[ext_resource path="res://res/zones/EvangelionZone/layer_2.png" type="Texture" id=63]
[ext_resource path="res://res/zones/EvangelionZone/_0000_Layer-1.png" type="Texture" id=64]
[ext_resource path="res://res/zones/EvangelionZone/_0002_Layer-3.png" type="Texture" id=65]
[ext_resource path="res://res/zones/EvangelionZone/_0001_Layer-2.png" type="Texture" id=66]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 26 ), ExtResource( 17 ), ExtResource( 27 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 25 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 21 ), ExtResource( 3 ), ExtResource( 22 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 32 ), ExtResource( 46 ), ExtResource( 40 ), ExtResource( 31 ), ExtResource( 37 ), ExtResource( 39 ), ExtResource( 36 ), ExtResource( 43 ), ExtResource( 35 ), ExtResource( 13 ), ExtResource( 28 ), ExtResource( 47 ), ExtResource( 34 ), ExtResource( 41 ), ExtResource( 45 ), ExtResource( 29 ), ExtResource( 50 ), ExtResource( 44 ), ExtResource( 30 ), ExtResource( 38 ), ExtResource( 33 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 42 ) ],
"loop": true,
"name": "default",
"speed": 14.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 204.336, -380.728 ), Vector2( 204.336, -345.909 ), Vector2( 204.336, -380.728 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 204.336, -390.728 ) ]
}

[node name="EvangelionZone" type="Node2D"]
script = ExtResource( 54 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2( 180, 50 )
scale = Vector2( 0.3, 0.3 )
transform = Transform2D( 0.3, 0, 0, 0.3, 180, 50 )

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1217, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Background"]
texture = ExtResource( 52 )

[node name="Stars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2000, 0 )

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
scale = Vector2( 0.3, 0.3 )
transform = Transform2D( 0.3, 0, 0, 0.3, 0, 0 )

[node name="Moon" type="ParallaxLayer" parent="ParallaxBackground2"]

[node name="light_back" type="Sprite" parent="ParallaxBackground2/Moon"]
visible = false
position = Vector2( 660.833, 164.167 )
scale = Vector2( 1.04902, 1.04902 )
z_index = -2
texture = ExtResource( 60 )

[node name="light" type="Sprite" parent="ParallaxBackground2/Moon"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 772.099, 94.7415 )
rotation = 0.00770319
scale = Vector2( 0.753817, 0.670693 )
z_index = 1
z_as_relative = false
texture = ExtResource( 56 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ParallaxBackground2/Moon"]
position = Vector2( 665.706, 290.127 )
scale = Vector2( 0.687952, 0.687952 )
frames = SubResource( 1 )
script = ExtResource( 51 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ParallaxBackground2/Moon/AnimatedSprite"]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="MoonPart" type="Sprite" parent="ParallaxBackground2/Moon/AnimatedSprite"]
position = Vector2( 204.336, -390.728 )
texture = ExtResource( 55 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="ParallaxBackground2/Moon/AnimatedSprite/MoonPart"]
remote_path = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ParallaxBackground2/Moon/AnimatedSprite/MoonPart"]
autoplay = "Idle"
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground2/Moon/AnimatedSprite"]
position = Vector2( -36.6667, -162.09 )
z_index = -1
z_as_relative = false
texture = ExtResource( 53 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="ParallaxBackground2/Moon/AnimatedSprite/Sprite"]
remote_path = NodePath("../..")

[node name="deco1" type="Sprite" parent="ParallaxBackground2/Moon"]
position = Vector2( 321.086, 248.742 )
texture = ExtResource( 57 )

[node name="deco2" type="Sprite" parent="ParallaxBackground2/Moon"]
position = Vector2( 971.186, 227.931 )
texture = ExtResource( 59 )

[node name="deco3" type="Sprite" parent="ParallaxBackground2/Moon"]
position = Vector2( 1296.17, 350.764 )
texture = ExtResource( 58 )

[node name="ParallaxBackground3" type="ParallaxBackground" parent="."]
offset = Vector2( 180, 50 )
scale = Vector2( 0.3, 0.3 )
transform = Transform2D( 0.3, 0, 0, 0.3, 180, 50 )

[node name="Clouds" type="ParallaxLayer" parent="ParallaxBackground3"]
motion_mirroring = Vector2( 2000, 0 )

[node name="Cloud1" type="Sprite" parent="ParallaxBackground3/Clouds"]
position = Vector2( 845.331, -25.1345 )
texture = ExtResource( 64 )

[node name="Cloud2" type="Sprite" parent="ParallaxBackground3/Clouds"]
position = Vector2( -187.072, 86.5953 )
texture = ExtResource( 66 )

[node name="Cloud3" type="Sprite" parent="ParallaxBackground3/Clouds"]
position = Vector2( -620.569, -100.576 )
texture = ExtResource( 65 )

[node name="Layer0" type="ParallaxLayer" parent="ParallaxBackground3"]
motion_mirroring = Vector2( 1217, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground3/Layer0"]
texture = ExtResource( 61 )

[node name="Layer2" type="ParallaxLayer" parent="ParallaxBackground3"]
visible = false
motion_mirroring = Vector2( 1217, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground3/Layer2"]
texture = ExtResource( 63 )

[node name="Layer1" type="ParallaxLayer" parent="ParallaxBackground3"]
visible = false
motion_mirroring = Vector2( 1217, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground3/Layer1"]
texture = ExtResource( 62 )

[node name="ParallaxBackground4" type="ParallaxBackground" parent="."]
layer = 100
offset = Vector2( 180, 50 )
scale = Vector2( 0.36, 0.36 )
transform = Transform2D( 0.36, 0, 0, 0.36, 180, 50 )

[node name="Layer2" type="ParallaxLayer" parent="ParallaxBackground4"]
motion_mirroring = Vector2( 1217, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground4/Layer2"]
texture = ExtResource( 63 )
